methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
    for (c2<- 1 to 6){
           ^