methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
  
var vuBiscuit = false
    for (c2<- 1 to 6){
     avance();
      if (estSurBiscuit()){
        vuBiscuit=true
      }
    
    for (c <- 1 to 6) {
       recule()
     }
  }
}